--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/dist/js/main.js": "/dist/js/main.js"
+    "/dist/js/main.js": "/dist/js/main.js",
+    "/dist/css/app.css": "/dist/css/app.css"
 }
